<resources>
    <string name="app_name">"Rep O' Counter"</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="statistics">Statistics</string>
    <string name="sets">sets: </string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="workoutName">Workout name</string>
    <string name="addExercise">Add exercise</string>"
    <string name="finish">Finish</string>"
    <string name="workoutLog">Workout log</string>
    <string name="charts">Charts</string>
    <string name="calendar">Calendar</string>


    <string-array name="routines">
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Shoulders</item>
        <item>Chest</item>
        <item>Back</item>
        <item>Legs</item>

    </string-array>


</resources>